# SysCtrl

./: .gitignore  README.md  index.html  package.json  sysctrl-dashboard.js
.kilo/plans/: 1784432687759-ui-restructure-sensor-expansion.md
packaging/: 99-sysctl.rules  build-appimage.sh  com.sysctl.helper.policy
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.ico.b64
src-tauri/src/: host.rs  ipc.rs  main.rs  sensors.rs
src-tauri/src/sensors/: cpu.rs  disk.rs  fan.rs  gpu_amd.rs  gpu_apple.rs  gpu_intel.rs  gpu_nvidia.rs  mock.rs  mod.rs
sysctl-helper/: Cargo.toml
sysctl-helper/src/: main.rs
