[package]
name = "sysctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
anyhow = "1"

# Sensor-specific crates (add later):
# sysinfo = "0.35"
# nvml-wrapper = "0.8"
